debug：移动端打不开

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Build, explore, survive and create in our free online Minecraft-style games. No download required, play directly in your browser!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://minecraft-games.net/">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://minecraft-games.net/">
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
