--- a/index.html
+++ b/index.html
@@ -1202,12 +1202,14 @@
                         <div class="spinner"></div>
                         <p>Loading game...</p>
                     </div>
-                    <iframe src="https://games.crazygames.com/en_US/bloxdhop-io/index.html?v=1.327" 
-                    class="game-frame" 
-                    id="gameFrame" 
-                    title="Minecraft Games" 
-                    allowfullscreen 
-                    sandbox="allow-forms allow-scripts allow-same-origin allow-popups"></iframe>
+        <iframe src="https://games.crazygames.com/en_US/bloxdhop-io/index.html?v=1.327"
+class="game-frame"
+id="gameFrame"
+title="Minecraft Games"
+allowfullscreen
+style="width: 100%; height: 100%; border: none; max-width: 100vw; max-height: 80vh;"
+sandbox="allow-forms allow-scripts allow-same-origin allow-popups allow-modals allow-pointer-lock"></iframe>
+
                 </div>
             </div>
             
