--- a/index.html
+++ b/index.html
@@ -1461,9 +1461,11 @@
                     </div>
 
                     <iframe src="https://games.crazygames.com/en_US/bloxdhop-io/index.html?v=1.327" class="game-frame"
-                        id="gameFrame" title="Minecraft Games" allowfullscreen
+                        id="gameFrame" title="Minecraft Games"
+                        allow="fullscreen; autoplay; clipboard-read; clipboard-write; gamepad; microphone; cross-origin-isolated; web-share"
+                        allowfullscreen="true"
                         style="width: 100%; height: 100%; border: none; max-width: 100vw; max-height: 80vh;"
-                        sandbox="allow-forms allow-scripts allow-same-origin allow-popups allow-modals allow-pointer-lock allow-downloads allow-orientation-lock">
+                        sandbox="allow-forms allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-modals allow-pointer-lock allow-presentation allow-downloads allow-orientation-lock">
                     </iframe>
 
                 </div>
