--- a/index.html
+++ b/index.html
@@ -491,17 +491,20 @@
     <section class="recent-articles-section">
         <div class="container">
             <h2>Minecraft Tips & Guides</h2>
+
             <div class="recent-articles-home">
+
+                <!-- TODO -->
                 <article class="article-preview">
                     <div class="article-preview-thumbnail">
                         <img src="images/articles/building-tips.jpg" alt="Minecraft Building Tips">
-                        <a href="articles/building-tips.html" class="read-more-overlay">
+                        <a href="articles/top-10-puzzle-games.html" class="read-more-overlay">
                             <span>Read More</span>
                         </a>
                     </div>
                     <div class="article-preview-info">
                         <span class="article-category">Building</span>
-                        <h3>10 Essential Building Tips for Minecraft Players</h3>
+                        <h3>Top 10 Building Techniques Every Minecraft Player Should Know</h3>
                         <p>Learn the best techniques to improve your building skills and create amazing structures.</p>
                         <div class="article-meta">
                             <span><i class="far fa-calendar"></i> Mar 28, 2024</span>
@@ -510,7 +513,7 @@
                     </div>
                 </article>
 
-                <article class="article-preview">
+                <!-- <article class="article-preview">
                     <div class="article-preview-thumbnail">
                         <img src="images/articles/survival-guide.jpg" alt="Minecraft Survival Guide">
                         <a href="articles/survival-guide.html" class="read-more-overlay">
@@ -544,7 +547,7 @@
                             <span><i class="far fa-clock"></i> 7 min read</span>
                         </div>
                     </div>
-                </article>
+                </article> -->
             </div>
             <div class="view-all-articles">
                 <a href="articles/index.html" class="btn">View All Articles</a>
