添加游戏36个

--- a/index.html
+++ b/index.html
@@ -299,59 +299,49 @@
         <div class="container">
             <h2>Featured Minecraft Games</h2>
             <div class="games-grid">
-                <div class="game-card" data-category="building" data-page="1">
+
+
+
+                <div class="game-card" data-category="adventure" data-page="1">
                     <div class="game-thumbnail">
-                        <img src="images/games/blocky-craft.jpg" alt="Blocky Craft">
-                        <a href="games/blocky-craft.html" class="play-button">
+                        <img src="images/games/noob-trolls-pro.jpg" alt="Noob Trolls Pro">
+                        <a href="games/noob-trolls-pro.html" class="play-button">
                             <i class="fas fa-play"></i>
                         </a>
                     </div>
                     <div class="game-info">
-                        <h3>Blocky Craft</h3>
-                        <p>Build your own world block by block in this creative sandbox game.</p>
-                        <span class="category">Building</span>
+                        <h3>Noob Trolls Pro</h3>
+                        <p>Make prank videos and become internet famous by trolling the unsuspecting Pro!</p>
+                        <span class="category">Adventure</span>
+                    </div>
+                </div>
+
+                <div class="game-card" data-category="Survival" data-page="1">
+                    <div class="game-thumbnail">
+                        <img src="images/games/mine-blocks.jpg" alt="Mine Blocks">
+                        <a href="games/mine-blocks.html" class="play-button">
+                            <i class="fas fa-play"></i>
+                        </a>
+                    </div>
+                    <div class="game-info">
+                        <h3>Mine Blocks</h3>
+                        <p>Explore, craft, and survive in this 2D Minecraft-inspired world with multiple game modes.</p>
+                        <span class="category">Survival</span>
                     </div>
                 </div>
 
                 <div class="game-card" data-category="survival" data-page="1">
                     <div class="game-thumbnail">
-                        <img src="images/games/mine-survival.jpg" alt="bloxd-io">
-                        <a href="games/bloxd-io.html" class="play-button">
+                        <img src="images/games/noob-miner-prison.jpg" alt="Noob Miner: Escape From Prison">
+                        <a href="games/noob-miner-prison.html" class="play-button">
                             <i class="fas fa-play"></i>
                         </a>
                     </div>
                     <div class="game-info">
-                        <h3>bloxd-io</h3>
-                        <p>Survive the night, gather resources, and craft tools to stay alive.</p>
+                        <h3>Noob Miner: Escape From Prison</h3>
+                        <p>Mine resources, upgrade your tools, and find a way to escape from prison in this exciting
+                            survival game.</p>
                         <span class="category">Survival</span>
-                    </div>
-                </div>
-
-                <div class="game-card" data-category="adventure" data-page="1">
-                    <div class="game-thumbnail">
-                        <img src="images/games/block-adventures.jpg" alt="build-and-crush-page">
-                        <a href="games/build-and-crush-page.html" class="play-button">
-                            <i class="fas fa-play"></i>
-                        </a>
-                    </div>
-                    <div class="game-info">
-                        <h3>build-and-crush-page</h3>
-                        <p>Embark on an epic adventure in a blocky world full of quests.</p>
-                        <span class="category">Adventure</span>
-                    </div>
-                </div>
-
-                <div class="game-card" data-category="pvp" data-page="1">
-                    <div class="game-thumbnail">
-                        <img src="images/games/mine-battles.jpg" alt="cuberealm-io">
-                        <a href="games/cuberealm-io.html" class="play-button">
-                            <i class="fas fa-play"></i>
-                        </a>
-                    </div>
-                    <div class="game-info">
-                        <h3>cuberealm-io</h3>
-                        <p>Fight against other players in various PvP arenas and game modes.</p>
-                        <span class="category">PvP</span>
                     </div>
                 </div>
             </div>
@@ -374,62 +364,60 @@
 
             <div class="games-grid games-list">
                 <!-- Page 1 -->
-
-                <div class="game-card" data-category="building" data-page="1">
+                <div class="game-card" data-category="adventure" data-page="1">
                     <div class="game-thumbnail">
-                        <img src="images/games/blocky-craft.jpg" alt="Blocky Craft">
-                        <a href="games/blocky-craft.html" class="play-button">
+                        <img src="images/games/noob-trolls-pro.jpg" alt="Noob Trolls Pro">
+                        <a href="games/noob-trolls-pro.html" class="play-button">
                             <i class="fas fa-play"></i>
                         </a>
                     </div>
                     <div class="game-info">
-                        <h3>Blocky Craft</h3>
-                        <p>Build your own world block by block in this creative sandbox game.</p>
-                        <span class="category">Building</span>
+                        <h3>Noob Trolls Pro</h3>
+                        <p>Make prank videos and become internet famous by trolling the unsuspecting Pro!</p>
+                        <div class="game-meta">
+                            <span class="rating"><i class="fas fa-star"></i> 4.7</span>
+                            <span class="plays"><i class="fas fa-gamepad"></i> 287,453</span>
+                        </div>
                     </div>
                 </div>
+
+                <div class="game-card" data-category="Survival" data-page="1">
+                    <div class="game-thumbnail">
+                        <img src="images/games/mine-blocks.jpg" alt="Mine Blocks">
+                        <a href="games/mine-blocks.html" class="play-button">
+                            <i class="fas fa-play"></i>
+                        </a>
+                    </div>
+                    <div class="game-info">
+                        <h3>Mine Blocks</h3>
+                        <p>Explore, craft, and survive in this 2D Minecraft-inspired world with multiple game modes.</p>
+                        <div class="game-meta">
+                            <span class="rating"><i class="fas fa-star"></i> 4.8</span>
+                            <span class="plays"><i class="fas fa-gamepad"></i> 335,715</span>
+                        </div>
+                    </div>
+                </div>
+
+
 
                 <div class="game-card" data-category="survival" data-page="1">
                     <div class="game-thumbnail">
-                        <img src="images/games/mine-survival.jpg" alt="bloxd-io">
-                        <a href="games/bloxd-io.html" class="play-button">
+                        <img src="images/games/noob-miner-prison.jpg" alt="Noob Miner: Escape From Prison">
+                        <a href="games/noob-miner-prison.html" class="play-button">
                             <i class="fas fa-play"></i>
                         </a>
                     </div>
                     <div class="game-info">
-                        <h3>bloxd-io</h3>
-                        <p>Survive the night, gather resources, and craft tools to stay alive.</p>
-                        <span class="category">Survival</span>
+                        <h3>Noob Miner: Escape From Prison</h3>
+                        <p>Mine resources, upgrade your tools, and find a way to escape from prison in this exciting
+                            survival game.</p>
+                        <div class="game-meta">
+                            <span class="rating"><i class="fas fa-star"></i> 4.6</span>
+                            <span class="plays"><i class="fas fa-gamepad"></i> 247,893</span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="game-card" data-category="adventure" data-page="1">
-                    <div class="game-thumbnail">
-                        <img src="images/games/block-adventures.jpg" alt="build-and-crush-page">
-                        <a href="games/build-and-crush-page.html" class="play-button">
-                            <i class="fas fa-play"></i>
-                        </a>
-                    </div>
-                    <div class="game-info">
-                        <h3>build-and-crush-page</h3>
-                        <p>Embark on an epic adventure in a blocky world full of quests.</p>
-                        <span class="category">Adventure</span>
-                    </div>
-                </div>
-
-                <div class="game-card" data-category="pvp" data-page="1">
-                    <div class="game-thumbnail">
-                        <img src="images/games/mine-battles.jpg" alt="cuberealm-io">
-                        <a href="games/cuberealm-io.html" class="play-button">
-                            <i class="fas fa-play"></i>
-                        </a>
-                    </div>
-                    <div class="game-info">
-                        <h3>cuberealm-io</h3>
-                        <p>Fight against other players in various PvP arenas and game modes.</p>
-                        <span class="category">PvP</span>
-                    </div>
-                </div>
 
 
             </div>
@@ -447,7 +435,7 @@
     </section>
 
     <!-- Game Categories -->
-<!--      
+    <!--      
     <section class="game-categories">
         <div class="container">
             <h2>Minecraft Game Categories</h2>
