update 修复gsc 无法被编入索引

--- a/index.html
+++ b/index.html
@@ -13,24 +13,17 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
-
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://minecraft-games.net/">
-    <meta property="og:title" content="Minecraft Games - Best Free Minecraft-Style Games">
-    <meta property="og:description"
-        content="Play the best free Minecraft-style games online. Enjoy block building, survival, adventure, and sandbox games similar to Minecraft.">
-    <meta property="og:image" content="https://minecraft-games.net/images/og-image.jpg">
+    <meta property="og:title" content="Minecraft Games - Free Minecraft-Style Games to Play Online">
+    <meta property="og:description" content="Play the best free Minecraft-style games directly in your browser. Enjoy building games, adventure games, survival games, and more without downloads.">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://minecraft-games.net/">
-    <meta property="twitter:title" content="Minecraft Games - Best Free Minecraft-Style Games">
-    <meta property="twitter:description"
-        content="Play the best free Minecraft-style games online. Enjoy block building, survival, adventure, and sandbox games similar to Minecraft.">
-    <meta property="twitter:image" content="https://minecraft-games.net/images/og-image.jpg">
+    <meta property="twitter:title" content="Minecraft Games - Free Minecraft-Style Games to Play Online">
+    <meta property="twitter:description" content="Play the best free Minecraft-style games directly in your browser. Enjoy building games, adventure games, survival games, and more without downloads.">
 
     <!-- Schema.org markup for Google -->
     <script type="application/ld+json">
@@ -201,7 +194,7 @@
         }
 
         .banner {
-            background: url('images/minecraft-banner.jpg') center/cover;
+            background-color: var(--primary-color);
             height: 400px;
             display: flex;
             align-items: center;
